--- a/pages/eventos.html
+++ b/pages/eventos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../estilos/style_eventos.css">
+    <link rel="stylesheet" href="../estilos/css/style_eventos.css">
     <title>Myart</title>
 </head>
 
